--- a/locales/en.json
+++ b/locales/en.json
@@ -109,5 +109,20 @@
     "Redo the lesson": "Redo the lesson",
     "No transaction yet": "No transaction yet",
     "Related Products": "Related Products",
-    "0 products": "0 products"
+    "0 products": "0 products",
+    "Main lesson": "Main lesson",
+    "No lessons": "No lessons",
+    "Additional lesson": "Additional lesson",
+    "Opened": "Opened",
+    "Locked": "Locked",
+    "Buy this course": "Buy this course",
+    "Description": "Description",
+    "Support kit": "Support kit",
+    "Related lesson": "Related lesson",
+    "Course information": "Course information",
+    "Course name": "Course name",
+    "Payment information": "Payment information",
+    "Payment": "Payment",
+    "Do you really want to initiate this order?": "Do you really want to initiate this order?",
+    "Order payment successful": "Order payment successful"
 }
