--- a/locales/vn.json
+++ b/locales/vn.json
@@ -109,5 +109,20 @@
     "Redo the lesson": "Làm lại bài",
     "No transaction yet": "Lịch sử giao dịch trống",
     "Related Products": "Sản phẩm liên quan",
-    "0 products": "0 sản phẩm"
+    "0 products": "0 sản phẩm",
+    "Main lesson": "Bài học chính",
+    "No lessons": "Không có bài học",
+    "Additional lesson": "Bài học bổ trợ",
+    "Opened": "Đã mở",
+    "Locked": "Đang khóa",
+    "Buy this course": "Mua khóa học",
+    "Description": "Mô tả",
+    "Support kit": "Bộ kit hỗ trợ",
+    "Related lesson": "Bài học liên quan",
+    "Course information": "Thông tin khóa học",
+    "Course name": "Tên khóa học",
+    "Payment information": "Thông tin thanh toán",
+    "Payment": "Thanh toán",
+    "Do you really want to initiate this order?": "Bạn có thực sự muốn thanh toán đơn hàng này không?",
+    "Order payment successful": "Đơn hàng thanh toán thành công"
 }
