--- a/locales/en.json
+++ b/locales/en.json
@@ -124,5 +124,7 @@
     "Payment information": "Payment information",
     "Payment": "Payment",
     "Do you really want to initiate this order?": "Do you really want to initiate this order?",
-    "Order payment successful": "Order payment successful"
+    "Order payment successful": "Order payment successful",
+    "You have answered correctly": "You have answered correctly",
+    "You have answered incorrectly": "You have answered incorrectly"
 }
