--- a/locales/en.json
+++ b/locales/en.json
@@ -126,5 +126,9 @@
     "Do you really want to initiate this order?": "Do you really want to initiate this order?",
     "Order payment successful": "Order payment successful",
     "You have answered correctly": "You have answered correctly",
-    "You have answered incorrectly": "You have answered incorrectly"
+    "You have answered incorrectly": "You have answered incorrectly",
+    "Submit": "Submit",
+    "Lesson Content": "Lesson Content",
+    "Congratulations, you have completed the test": "Congratulations, you have completed the test",
+    "Test results": "Test results"
 }
