--- a/locales/vn.json
+++ b/locales/vn.json
@@ -126,5 +126,9 @@
     "Do you really want to initiate this order?": "Bạn có thực sự muốn thanh toán đơn hàng này không?",
     "Order payment successful": "Đơn hàng thanh toán thành công",
     "You have answered correctly": "Bạn đã trả lời đúng",
-    "You have answered incorrectly": "Bạn đã trả lời sai"
+    "You have answered incorrectly": "Bạn đã trả lời sai",
+    "Submit": "Nộp bài",
+    "Lesson Content": "Nội dung bài học",
+    "Congratulations, you have completed the test": "Chúc mừng bạn đã hoàn thành bài kiểm tra",
+    "Test results": "Kết quả làm bài"
 }
