--- a/locales/en.json
+++ b/locales/en.json
@@ -140,5 +140,6 @@
     "View report": "View report",
     "Report": "Report",
     "Average Score": "Average Score",
-    "Pronunciation point": "Pronunciation point"
+    "Pronunciation point": "Pronunciation point",
+    "Re-do Questions": "Re-do Questions"
 }
