--- a/locales/vn.json
+++ b/locales/vn.json
@@ -140,5 +140,6 @@
     "View report": "Xem tổng kết",
     "Report": "Tổng kết",
     "Average Score": "Điểm trung bình",
-    "Pronunciation point": "Điểm phát âm"
+    "Pronunciation point": "Điểm phát âm",
+    "Re-do Questions": "Làm lại bài"
 }
