--- a/locales/vn.json
+++ b/locales/vn.json
@@ -7,7 +7,6 @@
     "Delete Account": "Xóa tài khoản",
     "If you proceed to delete your account, all your data will be permanently unrecoverable.": "Nếu bạn thực hiện xóa tài khoản mọi dữ liệu của bạn sẽ không thể khôi phục được nữa.",
     "Cancel": "Hủy",
-    "Agree": "Đồng ý",
     "Log Out of Account": "Đăng xuất tài khoản",
     "Do you want to log out of this account?": "Bạn có muốn đăng xuất khỏi tài khoản này không?",
     "No": "Không",
@@ -122,7 +121,6 @@
     "Course information": "Thông tin khóa học",
     "Course name": "Tên khóa học",
     "Payment information": "Thông tin thanh toán",
-    "Payment": "Thanh toán",
     "Do you really want to initiate this order?": "Bạn có thực sự muốn thanh toán đơn hàng này không?",
     "Order payment successful": "Đơn hàng thanh toán thành công",
     "You have answered correctly": "Bạn đã trả lời đúng",
@@ -134,12 +132,14 @@
     "Pronunciation results": "Kết quả phát âm",
     "Overall score": "Tổng điểm",
     "English proficiency scrores": "Điểm kiểm tra trình độ tiếng anh",
-    "Pronunciation": "Phát âm",
     "Fluency feedback": "Phản hồi phát âm",
     "ACCENT": "NGỮ ĐIỆU",
     "View report": "Xem tổng kết",
     "Report": "Tổng kết",
     "Average Score": "Điểm trung bình",
     "Pronunciation point": "Điểm phát âm",
-    "Re-do Questions": "Làm lại bài"
+    "Re-do Questions": "Làm lại bài",
+    "Completed": "Đã hoàn thành",
+    "Uncompleted": "Chưa hoàn thành",
+    "Loading lesson...": "Đang tải bài học..."
 }
