--- a/locales/en.json
+++ b/locales/en.json
@@ -141,5 +141,14 @@
     "Re-do Questions": "Re-do Questions",
     "Completed": "Completed",
     "Uncompleted": "Uncompleted",
-    "Loading lesson...": "Loading lesson..."
+    "Loading lesson...": "Loading lesson...",
+    "Speaking skills": "Speaking skills",
+    "Reading Fluency": "Reading Fluency",
+    "Content feedback": "Content feedback",
+    "Feedback": "Feedback",
+    "Vocabulary": "Vocabulary",
+    "Grammar": "Grammar",
+    "Grammar feedback": "Grammar feedback",
+    "Vocabulary feedback": "Vocabulary feedback",
+    "Learning path": "Learning path"
 }
