--- a/locales/vn.json
+++ b/locales/vn.json
@@ -149,5 +149,6 @@
     "Vocabulary": "Từ vựng",
     "Grammar": "Ngữ pháp",
     "Grammar feedback": "Phản hồi ngữ pháp",
-    "Vocabulary feedback": "Phản hồi từ vựng"
+    "Vocabulary feedback": "Phản hồi từ vựng",
+    "Learning path": "Lộ trình"
 }
