--- a/locales/en.json
+++ b/locales/en.json
@@ -150,5 +150,6 @@
     "Grammar": "Grammar",
     "Grammar feedback": "Grammar feedback",
     "Vocabulary feedback": "Vocabulary feedback",
-    "Learning path": "Learning path"
+    "Learning path": "Learning path",
+    "You do not own this course, own it now?": "You do not own this course, own it now?"
 }
