--- a/locales/vn.json
+++ b/locales/vn.json
@@ -150,5 +150,6 @@
     "Grammar": "Ngữ pháp",
     "Grammar feedback": "Phản hồi ngữ pháp",
     "Vocabulary feedback": "Phản hồi từ vựng",
-    "Learning path": "Lộ trình"
+    "Learning path": "Lộ trình",
+    "You do not own this course, own it now?": " Bạn chưa sở hữu khóa học này, sở hữu ngay?"
 }
