--- a/locales/en.json
+++ b/locales/en.json
@@ -151,5 +151,14 @@
     "Grammar feedback": "Grammar feedback",
     "Vocabulary feedback": "Vocabulary feedback",
     "Learning path": "Learning path",
-    "You do not own this course, own it now?": "You do not own this course, own it now?"
+    "You do not own this course, own it now?": "You do not own this course, own it now?",
+    "My Learning Path": "My Learning Path",
+    "Class Room": "Class Room",
+    "Zoo": "Zoo",
+    "Map": "Map",
+    "Farm": "Farm",
+    "My hamster": "My hamster",
+    "My Pet Park": "My Pet Park",
+    "Things To Do": "Things To Do",
+    "View Lesson...": "View Lesson..."
 }
