--- a/locales/vn.json
+++ b/locales/vn.json
@@ -151,5 +151,14 @@
     "Grammar feedback": "Phản hồi ngữ pháp",
     "Vocabulary feedback": "Phản hồi từ vựng",
     "Learning path": "Lộ trình",
-    "You do not own this course, own it now?": " Bạn chưa sở hữu khóa học này, sở hữu ngay?"
+    "You do not own this course, own it now?": " Bạn chưa sở hữu khóa học này, sở hữu ngay?",
+    "My Learning Path": "Lộ trình học của tôi",
+    "Class Room": "Lớp học",
+    "Zoo": "Sở thú",
+    "Map": "Bản đồ",
+    "Farm": "Nông trại",
+    "My hamster": "Chú chuột hamster của tôi",
+    "My Pet Park": "Công viên thú cưng",
+    "Things To Do": "Những điều cần thực hiện",
+    "View Lesson...": "Xem bài học..."
 }
