--- a/locales/en.json
+++ b/locales/en.json
@@ -160,5 +160,6 @@
     "My hamster": "My hamster",
     "My Pet Park": "My Pet Park",
     "Things To Do": "Things To Do",
-    "View Lesson...": "View Lesson..."
+    "View Lesson...": "View Lesson...",
+    "You already own this course": "You already own this course"
 }
