--- a/locales/vn.json
+++ b/locales/vn.json
@@ -160,5 +160,6 @@
     "My hamster": "Chú chuột hamster của tôi",
     "My Pet Park": "Công viên thú cưng",
     "Things To Do": "Những điều cần thực hiện",
-    "View Lesson...": "Xem bài học..."
+    "View Lesson...": "Xem bài học...",
+    "You already own this course": "Bạn đã sở hữu khóa học này"
 }
