--- a/locales/en.json
+++ b/locales/en.json
@@ -161,5 +161,8 @@
     "My Pet Park": "My Pet Park",
     "Things To Do": "Things To Do",
     "View Lesson...": "View Lesson...",
-    "You already own this course": "You already own this course"
+    "You already own this course": "You already own this course",
+    "Scripted": "Scripted",
+    "Custom": "Custom",
+    "Type your question...": "Type your question..."
 }
