--- a/locales/vn.json
+++ b/locales/vn.json
@@ -161,5 +161,8 @@
     "My Pet Park": "Công viên thú cưng",
     "Things To Do": "Những điều cần thực hiện",
     "View Lesson...": "Xem bài học...",
-    "You already own this course": "Bạn đã sở hữu khóa học này"
+    "You already own this course": "Bạn đã sở hữu khóa học này",
+    "Scripted": "Văn bản có sẵn",
+    "Custom": "Tự viết",
+    "Type your question...": "Nhập câu của bạn vào đây..."
 }
