--- a/locales/vn.json
+++ b/locales/vn.json
@@ -164,5 +164,6 @@
     "You already own this course": "Bạn đã sở hữu khóa học này",
     "Scripted": "Văn bản có sẵn",
     "Custom": "Tự viết",
-    "Type your question...": "Nhập câu của bạn vào đây..."
+    "Type your question...": "Nhập câu của bạn vào đây...",
+    "Progress": "Tiến trình"
 }
