--- a/locales/vn.json
+++ b/locales/vn.json
@@ -165,5 +165,21 @@
     "Scripted": "Văn bản có sẵn",
     "Custom": "Tự viết",
     "Type your question...": "Nhập câu của bạn vào đây...",
-    "Progress": "Tiến trình"
+    "Progress": "Tiến trình",
+    "All time": "Tất cả",
+    "Today": "Hôm nay",
+    "Last week": "Tuần trước",
+    "Last month": "Tháng trước",
+    "Last year": "Năm trước",
+    "Tickets Earned": "Vé đã kiếm được",
+    "Tickets Spent": "Vé đã sử dụng",
+    "Earned & Spent": "Đã kiếm được và đã sử dụng",
+    "Level": "Cấp độ",
+    "Ticket progress": "Tiến trình vé",
+    "Select progress": "chọn tiến trình",
+    "Activities completed": "Bài học hoàn thành",
+    "Subject progress": "Tiến trình môn học",
+    "View all progress": "Xem tất cả tiến trình",
+    "Compact": "Rút gọn",
+    "Number of Tickets": "Số lượng vé"
 }
