--- a/locales/en.json
+++ b/locales/en.json
@@ -164,5 +164,10 @@
     "You already own this course": "You already own this course",
     "Scripted": "Scripted",
     "Custom": "Custom",
-    "Type your question...": "Type your question..."
+    "Type your question...": "Type your question...",
+    "More Lesson": "More Lesson",
+    "Go to store": "Go to store",
+    "Continue": "Continue",
+    "Favorite": "Favorite",
+    "Replay": "Replay"
 }
