--- a/locales/vn.json
+++ b/locales/vn.json
@@ -181,5 +181,10 @@
     "Subject progress": "Tiến trình môn học",
     "View all progress": "Xem tất cả tiến trình",
     "Compact": "Rút gọn",
-    "Number of Tickets": "Số lượng vé"
+    "Number of Tickets": "Số lượng vé",
+    "More Lesson": "Thêm bài học",
+    "Go to store": "Cửa hàng",
+    "Continue": "Tiếp tục",
+    "Favorite": "Yêu thích",
+    "Replay": "Phát lại"
 }
